# JupitersThrone

./: CMakeLists.txt
data/world/: creator_demo.js
docs/: Threads Description.drawio
lib/: CMakeLists.txt
lib/luacpp/: CMakeLists.txt  LuaContext.cpp
lib/lualang/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  consolewindow.cpp  consolewindow.h  consolewindow.ui  terminalmanager.cpp  terminalmanager.h
src/game/: CMakeLists.txt  constants.h  structures.h
src/game/core/: combatengine.cpp  combatengine.h  commandparser.cpp  commandparser.h  dialougeengine.cpp  dialougeengine.h  game.cpp  game.h  gameloop.cpp  gameloop.h
src/game/io/: player.cpp  player.h  world.cpp  world.h
src/game/scripting/: dice.cpp  dice.h
src/game/utils/: colors.cpp  colors.h  debug.cpp  debug.h  general.cpp  general.h  screenmanager.cpp  screenmanager.h
